HISTORY
=======

History of changes to PHC (name of developer listed in brackets)::


    PloneHelpCenter 4.0a1 (UNRELEASED)

    - Fix the imports to use always Zope 3 style interfaces, making
      the code work both in Plone 3 and 4 simultaneuslly.
      [dukebody, thanks davisagli]

    - Merge relevant changes from the Plone 4 migration branch from
      Fabio Rizzo. [dukebody]

    - Reverted obsolete code from the referencemanual_view.pt fix. [acsr]

    - Updated INSTALL.txt with step by step upgrade guide related to issue #142 "upgrade steps order unclear" and issue #132 "errata mentioning Ploneboard". [acsr]

    - Fixed an issue with failure to display referencemanual_view when
      files are present in the reference manual. [acsr, thanks dukebody]

    - Update the whole product to work with Plone 4.0a2. [dukebody]

    - Removed "global allow" for Reference Manual. This closes 
      http://plone.org/products/plonehelpcenter/issues/150.
      [keul]
    
    - updated INSTALL.txt with step by step upgrade guide related to 
      issue #142 "upgrade steps order unclear" and issue #132 "errata 
      mentioning Ploneboard". [acsr]

    - Fix next/previous custom adapter to ignore types not
      implementing IHelpCenterMultiPage, effectively removing images
      and files from the next/previous links.
      This fixes
      http://plone.org/products/plonehelpcenter/issues/152/.
      [dukebody]
    
    - Respect exclude_from_nav setting in the reference manual
      table of contents generation [miohtama]


    PloneHelpCenter 3.0b3

    - Mark search results elements with their workflow state to make
      possible to grey-out outdated elements. 
      This closes http://dev.plone.org/plone/ticket/8880.
      [dukebody]

    - Fix next/previous custom adapter to work correctly with manual
      sections. [dukebody]

    PloneHelpCenter 3.0b2

    - Make hc_view available in PSC.    

    PloneHelpCenter 3.0b1
    
    - View cleanups.
